--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<br><br>
 
-  <button onclick = "song()" class = "btn btn-primary song">Song Name</button>
+  <button onclick = "song()" class = "btn btn-primary song" id = "song_id">Song Name</button>
 </center>
 
 <script src="main.js"></script>
