--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <center>
   	<h3 class = "btn btn-info heading">AI DJ WEB APP
 	    <br>
-	    <span class = "note">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
+	    <span class = "note">NOTE - Get your left-hand wrist in front of the webcam to playHarry potter theme song . Get your right-hand wrist in front of the webcam to play Peter pan song.</span>
   	</h3>
 
 	<br><br>
